objects/Integration_Log__c.object
<CustomObject>
    <description>This object tracks and records the integration processing. Errors and response messages are logged to this object by Informatica.</description>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submission</fullName>
                </value>
                <value>
                    <fullName>Response</fullName>
                </value>
                <value>
                    <fullName>Synchronization</fullName>
                </value>
                <value>
                    <fullName>Information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Batch_Id__c</fullName>
        <description>The Batch process this action is a part of, if relevant.</description>
        <inlineHelpText>The Batch process this action is a part of, if relevant.</inlineHelpText>
        <label>Batch Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>The category of the log.</description>
        <inlineHelpText>The category of log.</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Integration</fullName>
                    <default>true</default>
                    <label>Integration</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Info</fullName>
                </value>
                <value>
                    <fullName>Task</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Days_to_Keep__c</fullName>
        <defaultValue>30</defaultValue>
        <description>Number of days to keep this record active in Salesforce. After this number of days, if the record is not marked Requires Attention, or is marked IsResolved, the record will be deleted.</description>
        <inlineHelpText>Number of days to keep this record active in Salesforce.</inlineHelpText>
        <label>Days to Keep</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DeleteDate__c</fullName>
        <formula>DATEVALUE( CreatedDate ) +  IF(ISNULL(Days_to_Keep__c),30,Days_to_Keep__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DeleteDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Detail__c</fullName>
        <label>Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Direction__c</fullName>
        <label>Direction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OutFromSF</fullName>
                </value>
                <value>
                    <fullName>InToSF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>The Id from the External System for the object this action is working against, if relevant.</description>
        <inlineHelpText>The Id from the External System for the object this action is working against, if relevant.</inlineHelpText>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_System__c</fullName>
        <description>The external system relevant to this action.</description>
        <inlineHelpText>The external system relevant to this action.</inlineHelpText>
        <label>External System</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsResolved__c</fullName>
        <formula>NOT(ISNULL( Resolved_DateTime__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsResolved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Object_Api_Name__c</fullName>
        <description>The API name of the primary object this action works against, if relevant.</description>
        <inlineHelpText>The API name of the primary object this action works against, if relevant.</inlineHelpText>
        <label>Object Api Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Id__c</fullName>
        <description>Salesforce Id of the object this action works against, if relevant.</description>
        <inlineHelpText>Salesforce Id of the object this action works against, if relevant.</inlineHelpText>
        <label>Object Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <description>Reference key from an external system</description>
        <externalId>true</externalId>
        <label>Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requires_Attention__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether or not this log item requires manual intervention to resolve.</description>
        <inlineHelpText>Indicates whether or not this log item requires manual intervention to resolve.</inlineHelpText>
        <label>Requires Attention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resolution_Notes__c</fullName>
        <description>Notes relating to the resolution of this issue, if relevant.</description>
        <inlineHelpText>Notes relating to the resolution of this issue, if relevant.</inlineHelpText>
        <label>Resolution Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resolved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The User that resolved this item.</description>
        <inlineHelpText>The User that resolved this item.</inlineHelpText>
        <label>Resolved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Integration_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolved_DateTime__c</fullName>
        <description>When this log item was resolved, if relevant.</description>
        <inlineHelpText>When this log item was resolved, if relevant.</inlineHelpText>
        <label>Resolved DateTime</label>
        <type>DateTime</type>
    </fields>
    <label>Integration Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Direction__c</columns>
        <columns>Detail__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IL-{0000000000}</displayFormat>
        <label>Integration Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>